# mcpele

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .project  .travis.yml  AcceptTest.html  AcceptTest.rst  Action.html  Action.rst  BaseMCRunner.html  BaseMCRunner.rst  Base_MPI_Parallel_Tempering.html  Base_MPI_Parallel_Tempering.rst  CMakeLists.txt  CMakeLists.txt.in  ConfTest.html  ConfTest.rst  MPI_Parallel_Tempering.html  MPI_Parallel_Tempering.rst  README.md  README.rst  TakeStep.html  cppAcceptTest.html  cythonize.py  genindex.html  getting_started.html  index.html  index.rst  monte_carlo.html  monte_carlo.rst  objects.inv  parallel_tempering.html  parallel_tempering.rst  py-modindex.html  search.html  searchindex.js  setup.py  setup_with_cmake.py
cpp_tests/source/: CMakeLists.txt  example_progress.cpp  test_accept_tests.cpp  test_cdf_accumulator.cpp  test_checkpoint.cpp  test_conf_tests.cpp  test_histogram.cpp  test_main  test_mc.cpp  test_pair_dist_histogram.cpp  test_swap.cpp  test_takestep.cpp  test_time_series.cpp  trajectory_lbfgs.txt
source/: CMakeLists.txt  CODING_STYLE.rst  Doxyfile  DoxygenLayout.xml  adaptive_takestep.cpp  check_spherical_container.cpp  conf_test_OR.cpp  energy_window_test.cpp  gaussian_coords_displacement.cpp  histogram.cpp  lowest_eigenvalue.cpp  mc.cpp  metropolis_test.cpp  particle_pair_swap.cpp  random_coords_displacement.cpp  record_coords_timeseries.cpp  record_energy_histogram.cpp  record_mean_coord_vector.cpp  record_scalar_timeseries.cpp  record_vector_timeseries.cpp  rsm_displacement.cpp  take_step_pattern.cpp  take_step_probabilities.cpp  takestep.cpp
source/doc/html/: adaptive__takestep_8cpp.html  adaptive__takestep_8cpp_source.html  adaptive__takestep_8h.html  adaptive__takestep_8h_source.html  annotated.html  check__spherical__container_8cpp.html  check__spherical__container_8cpp_source.html  check__spherical__container_8h.html  check__spherical__container_8h_source.html  classes.html  classmcpele_1_1AcceptTest-members.html  classmcpele_1_1AcceptTest.html  classmcpele_1_1Action-members.html  classmcpele_1_1Action.html  classmcpele_1_1AdaptiveTakeStep-members.html  classmcpele_1_1AdaptiveTakeStep.html  classmcpele_1_1CheckSphericalContainer-members.html  classmcpele_1_1CheckSphericalContainer.html  classmcpele_1_1ConfTest-members.html  classmcpele_1_1ConfTest.html  classmcpele_1_1EnergyWindowTest-members.html  classmcpele_1_1EnergyWindowTest.html  classmcpele_1_1FindLowestEigenvalue-members.html  classmcpele_1_1FindLowestEigenvalue.html  classmcpele_1_1GaussianCoordsDisplacement-members.html  classmcpele_1_1GaussianCoordsDisplacement.html  classmcpele_1_1GetDisplacementPerParticle-members.html  classmcpele_1_1GetDisplacementPerParticle.html  classmcpele_1_1Histogram-members.html  classmcpele_1_1Histogram.html  classmcpele_1_1MC-members.html  classmcpele_1_1MC.html  classmcpele_1_1MetropolisTest-members.html  classmcpele_1_1MetropolisTest.html  classmcpele_1_1Moments-members.html  classmcpele_1_1Moments.html  classmcpele_1_1MovingAverageAcc-members.html  classmcpele_1_1MovingAverageAcc.html  classmcpele_1_1PairDistHistogram-members.html  classmcpele_1_1PairDistHistogram.html  (+144 more)
source/doc/latex/: adaptive__takestep_8cpp.tex  adaptive__takestep_8h.tex  annotated.tex  check__spherical__container_8cpp.tex  check__spherical__container_8h.tex  classmcpele_1_1AcceptTest.eps  classmcpele_1_1AcceptTest.tex  classmcpele_1_1Action.eps  classmcpele_1_1Action.tex  classmcpele_1_1AdaptiveTakeStep.eps  classmcpele_1_1AdaptiveTakeStep.tex  classmcpele_1_1CheckSphericalContainer.eps  classmcpele_1_1CheckSphericalContainer.tex  classmcpele_1_1ConfTest.eps  classmcpele_1_1ConfTest.tex  classmcpele_1_1EnergyWindowTest.eps  classmcpele_1_1EnergyWindowTest.tex  classmcpele_1_1FindLowestEigenvalue.tex  classmcpele_1_1GaussianCoordsDisplacement.eps  classmcpele_1_1GaussianCoordsDisplacement.tex  classmcpele_1_1GetDisplacementPerParticle.tex  classmcpele_1_1Histogram.tex  classmcpele_1_1MC.tex  classmcpele_1_1MetropolisTest.eps  classmcpele_1_1MetropolisTest.tex  classmcpele_1_1Moments.tex  classmcpele_1_1MovingAverageAcc.tex  classmcpele_1_1PairDistHistogram.tex  classmcpele_1_1ParticlePairSwap.eps  classmcpele_1_1ParticlePairSwap.tex  classmcpele_1_1PatternManager.tex  classmcpele_1_1RandomCoordsDisplacement.eps  classmcpele_1_1RandomCoordsDisplacement.tex  classmcpele_1_1RandomCoordsDisplacementAll.eps  classmcpele_1_1RandomCoordsDisplacementAll.tex  classmcpele_1_1RandomCoordsDisplacementSingle.eps  classmcpele_1_1RandomCoordsDisplacementSingle.tex  classmcpele_1_1RecordDisplacementPerParticleTimeseries.eps  classmcpele_1_1RecordDisplacementPerParticleTimeseries.tex  classmcpele_1_1RecordEnergyHistogram.eps  (+56 more)
source/doc/xml/: adaptive__takestep_8cpp.xml  adaptive__takestep_8h.xml  check__spherical__container_8cpp.xml  check__spherical__container_8h.xml  classmcpele_1_1AcceptTest.xml  classmcpele_1_1Action.xml  classmcpele_1_1AdaptiveTakeStep.xml  classmcpele_1_1CheckSphericalContainer.xml  classmcpele_1_1ConfTest.xml  classmcpele_1_1EnergyWindowTest.xml  classmcpele_1_1FindLowestEigenvalue.xml  classmcpele_1_1GaussianCoordsDisplacement.xml  classmcpele_1_1Histogram.xml  (+58 more)
source/mcpele/: accept_test.cpp  accept_test.h  actions.cpp  actions.h  adaptive_takestep.cpp  adaptive_takestep.h  cdf_accumulator.cpp  cdf_accumulator.h  check_spherical_container.h  check_spherical_container_config.h  conf_test.cpp  conf_test.h  conf_test_OR.h  energy_window_test.h  gaussian_coords_displacement.h  histogram.cpp  histogram.h  lowest_eigenvalue.cpp  lowest_eigenvalue.h  mc.cpp  mc.h  metropolis_test.cpp  metropolis_test.h  moving_average.h  nullpotential.h  pair_dist_histogram.h  particle_pair_swap.cpp  particle_pair_swap.h  pattern_iterator.h  pattern_manager.h  progress.h  random_coords_displacement.cpp  random_coords_displacement.h  random_coords_displacement_adaptive.h  record_coords_timeseries.h  record_displacement_per_particle_timeseries.h  record_energy_histogram.h  record_energy_timeseries.h  record_lowest_evalue_timeseries.h  record_mean_coord_vector.h  (+17 more)
(+1005 files in other folders)
